# hdom

./: LICENSE  README.md  hdom.cabal
src/: Hdom.hs
src/Hdom/: Card.hs  CardInfo.hs  Console.hs  Field.hs  Game.hs  PlayerIO.hs  Turn.hs  Types.hs  Util.hs
src/Hdom/Card/: BaseSet.hs  BasicSet.hs
test/: HdomSpec.hs
