Name:                   hdom
Version:                0.0.1
Author:                 Yamada Satoshi <mount.sa@gmail.com>
Maintainer:             Yamada Satoshi <mount.sa@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Hdom
  Other-Modules:        Hdom.Types
  Build-Depends:        base >= 4 && < 5
                      , containers >= 0.5
                      , random >= 1.0
                      , mtl >= 2.1
                      , transformers >= 0.3
                      , data-default >= 0.5
                      , lens >= 3.10
                      , free >= 4.2

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
--  Location:             
